# drop4crop-api

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  bacon.toml  country_value_generator.py  docker-compose.yaml  prestart.sh  pyproject.toml
app/: auth.py  config.py  crud.py  db.py  main.py
app/cog/: cache.py  views.py
app/cogs/: views.py
app/countries/: models.py  views.py
app/geoserver/: services.py
app/layers/: geoserver.py  links.py  models.py  services.py  utils.py  views.py
app/layers/uploads/: views.py
app/routes/: wms.py
app/s3/: services.py
app/styles/: models.py  services.py  views.py
app/users/: views.py
functions/: get_rast_tile.sql
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_consolidated_schema.rs  m20251111_142938_add_layer_statistics.rs  m20251120_000001_enable_pg_trgm.rs  m20251126_000001_add_layer_total_views.rs  m20251202_000001_add_style_interpolation_type.rs  m20251203_000001_add_style_label_settings.rs  m20251203_000002_add_layer_stats_status.rs  m20251203_000003_add_stats_status_value.rs  m20260413_000001_add_project_table.rs  m20260413_000002_add_reference_tables.rs  m20260413_000003_add_showcase_item_table.rs  m20260413_000004_add_project_scoping.rs  m20260420_000001_add_time_axis_config.rs  m20260423_000001_add_project_relation_sort_order.rs  m20260423_000002_add_tab_config.rs  m20260423_000003_drop_country_tables.rs  m20260424_000001_add_historical_year.rs  m20260427_000001_add_project_card_overlay.rs  m20260428_000001_add_project_globe_overlay.rs  m20260430_000001_variable_optional_fields_and_indexes.rs  m20260501_000001_add_project_use_card_as_extent.rs  m20260501_000002_add_variable_group_table.rs  m20260505_000001_add_variable_group_options.rs  m20260507_000001_replace_extent_with_bbox.rs  m20260527_000001_add_project_citation_and_unavailable_message.rs  m20260527_000002_add_project_stac_fields.rs  main.rs
migrations/: env.py
migrations/versions/: 00b682c1d768_add_enable_flag.py  132a15529d53_add_country_table.py  18464dc541c6_add_variables_to_layer_country_link.py  23f1f5fa5ab0_add_filename_field.py  24e71aed2baf_modify_name_of_key.py  3172d09b3247_add_boolean_to_mark_crop_specific_layers.py  35e93be09316_create_style_table.py  78acbcac4f84_modify_nullable_constraints_to_allow_.py  7e5d045ffa35_add_style_to_db.py  935c0dc4382d_add_unique_constraints.py  a73ec8695b2a_add_min_max_fields.py  a7931fc5c3ca_add_layers_table.py  ad7ab7b5bfb2_add_upload_id_field.py  b5f16c9cced0_add_uploaded_date_to_layers.py  c517a7971f8b_add_link_table_between_country_and_layer.py  cce3c15810c6_add_file_upload_management_fields.py  e17f78d56126_create_relationship_with_layer_style.py  f6c1133f0139_remove_fields_for_chunked_upload.py
src/: cache.rs  config.rs  lib.rs  main.rs  s3.rs  storage.rs  styling.rs  tiles.rs  views.rs
src/common/: layer_counts.rs  mod.rs  models.rs  state.rs  views.rs
src/entity/: country.rs  layer.rs  layercountrylink.rs  mod.rs  prelude.rs  style.rs
src/routes/: mod.rs  stats_sync.rs
src/routes/admin/: db.rs  views.rs
src/routes/climate_models/: db.rs  views.rs
src/routes/countries/: db.rs  models.rs  views.rs
src/routes/crops/: db.rs  views.rs
src/routes/layers/: db.rs  jobs.rs  mod.rs  models.rs  utils.rs  views.rs  worker.rs
src/routes/layers/cog/: views.rs
src/routes/layers/countries/: db.rs
src/routes/projects/: db.rs  mod.rs  project_climate_model.rs  project_crop.rs  project_scenario.rs  project_variable.rs  project_water_model.rs  views.rs
src/routes/scenarios/: db.rs  views.rs
src/routes/showcase_items/: db.rs  views.rs
src/routes/site_settings/: db.rs  mod.rs  views.rs
src/routes/styles/: db.rs  mod.rs  models.rs  utils.rs  views.rs
src/routes/tiles/: cache.rs  mod.rs  stac.rs  stac_router.rs  storage.rs  styling.rs  tiles.rs  utils.rs  views.rs  warming.rs
src/routes/variable_groups/: db.rs  views.rs
src/routes/variables/: db.rs  views.rs
src/routes/water_models/: db.rs  views.rs
tests/: integration_tests.rs  layer_utils_tests.rs  s3_and_cache_tests.rs  tests.rs
tests/common/: client.rs  db.rs  fixtures.rs  mod.rs  test_router.rs
tests/modules/: integration.rs  layer_utils.rs  mod.rs  s3_and_cache.rs
tools/: uploader.py
