[package]
name = "drop4crop-api-rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["multipart"] }
axum-keycloak-auth = "0.8.1"
chrono = "0.4.40"
crudcrate = "0.2.4"
dotenvy = "0.15.7"
gdal = { version = "0.17.1", features = ["bindgen"] }
gdal-sys = { version = "0.10.0", features = ["bindgen"] }
geo-types = "0.7.15"
georaster = "0.2.0"
geotiff = "0.0.2"
hyper = "1.6.0"
image = "0.25.5"
log = "0.4.26"
proj4rs = "0.1.5"
rand = "0.9.0"
redis = { version = "0.29.1", features = ["tokio-comp"] }
retry = "2.0.0"
rust-s3 = "0.35.1"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.7"
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["strum_macros"] }
tile-grid = "0.6.2"
tokio = { version = "1.44.1", features = ["full"] }
tokio-retry = "0.3.0"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = "1.16.0"
warp = "0.3"
migration = { path = "migration" }
multipart = "0.18"
tempfile = "3.8"
