[package]
name = "drop4crop-api"
version = "0.5.3"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["multipart"] }
axum-keycloak-auth = "0.8.3"
chrono = "0.4.42"
crudcrate = "0.7.0"
# crudcrate = { path = "../crudcrate/crudcrate" }
dotenvy = "0.15.7"
gdal = { version = "0.17.0", features = ["bindgen"] }
gdal-sys = { version = "0.10.0", features = ["bindgen"] }
geo-types = "0.7.17"
georaster = "0.2.0"
geotiff = "0.1.0"
hyper = "1.7.0"
http = "1.2.0"
image = "0.25.8"
log = "0.4.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
proj4rs = "0.1.9"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
retry = "2.1.0"
aws-config = "1.5.5"
aws-sdk-s3 = "1.37.0"
sea-orm = { version = "1.1.17", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.17"
serde = "1.0.228"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["strum_macros"] }
tile-grid = "0.6.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-retry = "0.3.0"
axum-governor = "1.0"
lazy-limit = "1.0"
real = { version = "0.1", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = "1.18.1"
warp = "0.4.2"
migration = { path = "migration" }
multipart = "0.18.0"
reqwest = { version = "0.12.24", features = ["json"] }
tempfile = "3.23.0"
stac = "0.13.0"
stac-api = "0.8.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tiff = "0.9"
serial_test = "3.2"
