[tool.poetry]
name = "drop4crop-api"
version = "0.1.0"
description = "The API for drop4crop"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.0.3"
httpx = "^0.27.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
# stac-fastapi-types = "^2.5.5.post1"
# stac-fastapi-api = "^2.5.5.post1"
# stac-fastapi-extensions = "^2.5.5.post1"
# stac-fastapi-sqlalchemy = "^2.4.5"
sqlmodel = "^0.0.19"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
